# writers

./: .gitignore  Cargo.toml  README.md
input/: base.mustache  one.md
input/deeper/even deeper/: ababagalamaga.md
src/: main.rs
